--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,16 +35,17 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   
-  # HTTP client for REST API
-  http: ^1.1.0
+  # Firebase
+  firebase_core: ^3.8.1
+  firebase_auth: ^5.3.3
+  cloud_firestore: ^5.5.0
   
   # Local database for offline mode
   sqflite: ^2.3.0
   path: ^1.8.3
   
-  # Local storage for tokens and preferences
+  # Local storage for preferences
   shared_preferences: ^2.2.2
-  flutter_secure_storage: ^9.0.0
   
   # State management
   provider: ^6.1.1
@@ -55,6 +56,17 @@ dependencies:
   
   # Utils
   intl: ^0.19.0
+  
+  # Connectivity monitoring for offline/online detection
+  connectivity_plus: ^5.0.2
+  
+  # Google Drive backup
+  google_sign_in: ^6.1.5
+  googleapis: ^11.4.0
+  googleapis_auth: ^1.4.1
+  
+  # File operations
+  path_provider: ^2.1.1
 
 dev_dependencies:
   flutter_test:
