--- a/codemagic.yaml
+++ b/codemagic.yaml
@@ -49,7 +49,7 @@ workflows:
       
       - name: Build iOS app
         script: |
-          flutter build ios --release --no-codesign
+          flutter build ipa --release --no-codesign
       
       - name: Build IPA (if code signing is configured)
         script: |
